-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14
-
Component/s: hotspot
-
b10
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.cpp: In member function 'void ShenandoahBarrierSetAssembler::generate_c1_load_reference_barrier_runtime_stub(StubAssembler*)':
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.cpp:901:24: error: 'c_rarg0' was not declared in this scope
__ load_parameter(0, c_rarg0);
^~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.cpp:901:24: error: 'c_rarg0' was not declared in this scope
__ load_parameter(0, c_rarg0);
^~~~~~~
- relates to
-
JDK-8228369 Shenandoah: Refactor LRB C1 stubs
-
- Resolved
-